sandc/test/fixtures/astRegression/shouldFail/productions/ifInlineTypeGuard/IfTypeGuardStatement.sand
pub class IfTypeGuardStatement {
    foo() {
        (
            if let inline a = b() {
                c();
            } else {
                c();
            }
        )
    }
}